# CheapSecurity

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  app.py  cctv.py  cheapsecurity.service  config.json  config.json.example  nginx.example.conf  pyproject.toml  requirements.txt  resumekimi.sh  web.py  wsgi.py
src/cheapsecurity/: __init__.py  app.py  cctv.py  diagnose.py  web.py  wsgi.py
src/cheapsecurity/static/css/: style.css
src/cheapsecurity/static/js/: app.js
src/cheapsecurity/templates/: index.html
static/css/: style.css
static/js/: app.js
templates/: index.html
tests/: conftest.py  helpers.py  test_cctv_unit.py  test_manual_video.py  test_web_unit.py
